package behavioral.strategy.CC2;

public interface ISoSanh<T> {
    int soSanh (T o1, T o2);
}
